// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <input
    class="input other-class this-is-a-test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`Input component should render 1`] = `
<DocumentFragment>
  <input
    class="input"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`Input component should use inline styles 1`] = `
<DocumentFragment>
  <input
    class="input"
    style="height: 250px;"
    type="text"
    value=""
  />
</DocumentFragment>
`;
